@@ -1,26 +1,26 @@
 #!/usr/bin/env python
 # -*- mode: python; coding: utf-8 -*-
-# Copyright © 2001, 2002 Translation Project.
+# Copyright © 2001, 2002, 2007 Translation Project.
 # Copyright © 1996, 1997, 1998, 1999, 2000 Progiciels Bourbeau-Pinard inc.
 # François Pinard <pinard@iro.umontreal.ca>, 1996.
 
 """\
-Reconstruct a documentation matrix of PO files availability.
-Produces `tmp-matrix.texi',`tmp-matrix.html' and `tmp-matrix.xml'.
+Construct matrices showing the availability of PO files:
+'tmp-matrix.texi', 'tmp-matrix.html' and 'tmp-matrix.xml'.
 """
 
-import os, sys
-import string
-os.umask(002)
+import os, sys, string
 
 sys.path.insert(0, sys.path[0]+'/../lib')
 import config, registry
 
-os.environ['PATH'] = '/usr/local/bin:' + os.environ['PATH']
 try: del os.environ['LANGUAGE']
 except KeyError:pass
 try: del os.environ['LANG']
 except KeyError:pass
+
+os.umask(0002)
+
 
 def main(*arguments):
     inventory = Inventory()
@@ -42,7 +42,8 @@ def ignored(filename):
     if filename[-9:]==".htaccess":
         return 1
     return 0
-
+
+
 class Inventory:
     """\
 Make an inventory of all `.pot' and `.po' files.
@@ -54,13 +55,13 @@ Make an inventory of all `.pot' and `.po' files.
         self.teams = {}
         self.pofiles = {}
         # Read list of POT files.
-        for file in os.listdir('%s' % config.pos_path):
+        for file in os.listdir('%s' % config.pots_path):
             try:
                 hints = registry.Hints(file)
             except (KeyError,ValueError):
                 if not ignored(file):
-                    sys.stderr.write("* Dubious file '%s/%s'?\n" %
-                                     (config.pos_path, file))
+                    sys.stderr.write("* Dubious file: %s/%s'\n" %
+                                     (config.pots_path, file))
             else:
                 self.domains[hints.domain.name] = [0, 0, 0]
         # Read PO file statistics.
@@ -73,13 +74,11 @@ Make an inventory of all `.pot' and `.po' files.
                 version.set_sort_key()
             except:
                 continue
-            #if len(team) > 2 and len(team) != 5:
-            #    team = team[:2]
             if ((not self.pofiles.has_key((domain, team))
                  or version > self.pofiles[domain, team][0])):
                 translated = postats[key][2]
                 if translated > 0:
-                    # drop possible mtime
+                    # Drop the mtime element.
                     self.pofiles[domain, team] = version, postats[key][:6]
         # Precompute various totals.
         for key in self.pofiles.keys():
@@ -142,7 +141,8 @@ Make an inventory of all `.pot' and `.po' files.
         pairs = map(presort, self.domains.keys())
         pairs.sort()
         self.all_domains = filter(None, map(postsort, pairs))
-
+
+
 class Html:
     """\
 Produce the availability matrix in HTML format.
@@ -162,7 +162,7 @@ From an idea David Sven had on 1997-01-22.
               '   </tr>\n'
               '   <tr>\n'
               '    <td></td>\n'
-              '    <th>Pcts</th>\n')
+              '    <th>Pct</th>\n')
         for team in inventory.all_teams:
             counts = inventory.teams[team.name]
             write('    <td align=right>%d%%</td>\n' % percentage(counts))
@@ -225,7 +225,8 @@ From an idea David Sven had on 1997-01-22.
               % commands.getoutput("date '+%Y-%m-%d %H:%M %z'"))
         write(' </body>\n'
               '</html>\n')
-
+
+
 class Texinfo:
     """\
 Produce the availability matrix in Texinfo format.
@@ -293,14 +294,19 @@ Produce the availability matrix in Texinfo format.
             write('\n')
         write('@end group\n')
 
+
 class Xml:
-    """Produce the matrix in XML format. Before changing the output
-       format of this function, check with Bruno Haible."""
+    """\
+Produce the matrix in XML format.  Before changing the output
+format of this function, check with Bruno Haible.
+"""
 
     def __init__(self, output, inventory):
         write = open(output, 'w').write
         write('<?xml version="1.0" encoding="UTF-8"?>\n');
-        write('<PoInventory xmlns:xsi="http://www.w3.org/2000/10/XMLSchema-instance" xsi:noNamespaceSchemaLocation="gnu/schema/PoInventory.xsd">\n');
+        write('<PoInventory xmlns:xsi="http://www.w3.org/2000/10/'
+              'XMLSchema-instance" xsi:noNamespaceSchemaLocation='
+              '"gnu/schema/PoInventory.xsd">\n');
         write('  <domains>\n');
         for domain in inventory.all_domains:
             write('    <domain name="%s"/>\n' % (domain.name));
@@ -315,10 +321,12 @@ class Xml:
             pair = inventory.pofiles.get((domain, team))
             if pair is not None:
                 version, percent = pair
-                write('    <po domain="%s" team="%s">%s</po>\n' % (domain, team, percent))
+                write('    <po domain="%s" team="%s">%s</po>\n'
+                      % (domain, team, percent))
         for domain in inventory.all_domains:
             for e in domain.ext:
-                write('    <po domain="%s" team="%s" external="yes"/>\n' % (domain.name, e))
+                write('    <po domain="%s" team="%s" external="yes"/>\n'
+                      % (domain.name, e))
         write('  </PoFiles>\n');
         write('</PoInventory>\n');
 
