@@ -42,8 +42,9 @@
 
 	<tr><td bgcolor="%(caption_color)s"><b>Documents</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="../html/thanks.html"><b>Contributors</b></a><br>
 	   <a href="../html/files.html"><b>Site overview</b></a><br>
+	   <a href="../html/thanks.html"><b>Contributors</b></a><br>
+	   <a href="../extra/matrix.html"><b>Matrix</b></a><br>
 	   <a href="../html/software.html"><b>Tools</b></a><br>
 	 </font></td></tr>
 	<tr><td height=5></td></tr>
